--- a/mabat/mabat/Strings.resx
+++ b/mabat/mabat/Strings.resx
@@ -117,20 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="auth" xml:space="preserve">
-    <value>Authenticated?</value>
-  </data>
-  <data name="desc" xml:space="preserve">
-    <value>Description</value>
-  </data>
-  <data name="details" xml:space="preserve">
+  <data name="events_details" xml:space="preserve">
     <value>Details</value>
   </data>
-  <data name="hw_vendor" xml:space="preserve">
-    <value>Hardware Vendor</value>
-  </data>
-  <data name="ip" xml:space="preserve">
+  <data name="events_ip" xml:space="preserve">
     <value>IP Address</value>
+  </data>
+  <data name="events_name" xml:space="preserve">
+    <value>Event Name</value>
+  </data>
+  <data name="events_time" xml:space="preserve">
+    <value>Time</value>
   </data>
   <data name="ip_offline" xml:space="preserve">
     <value>IP Offline</value>
@@ -138,34 +135,43 @@
   <data name="ip_online" xml:space="preserve">
     <value>IP Online</value>
   </data>
-  <data name="last_seen" xml:space="preserve">
-    <value>Last Seen</value>
-  </data>
-  <data name="mac" xml:space="preserve">
-    <value>MAC Address</value>
-  </data>
-  <data name="name" xml:space="preserve">
-    <value>Name</value>
-  </data>
   <data name="not_authorized" xml:space="preserve">
     <value>Not Authorized</value>
   </data>
-  <data name="os" xml:space="preserve">
+  <data name="things_auth" xml:space="preserve">
+    <value>Authenticated?</value>
+  </data>
+  <data name="things_desc" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="things_hw_vendor" xml:space="preserve">
+    <value>Hardware Vendor</value>
+  </data>
+  <data name="things_ip" xml:space="preserve">
+    <value>IP Address</value>
+  </data>
+  <data name="things_last_seen" xml:space="preserve">
+    <value>Last Seen</value>
+  </data>
+  <data name="things_mac" xml:space="preserve">
+    <value>MAC Address</value>
+  </data>
+  <data name="things_name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="things_os" xml:space="preserve">
     <value>Operating System</value>
+  </data>
+  <data name="things_type" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="things_vendor" xml:space="preserve">
+    <value>Vendor</value>
   </data>
   <data name="thing_offline" xml:space="preserve">
     <value>Thing Offline</value>
   </data>
   <data name="thing_online" xml:space="preserve">
     <value>Thing Online</value>
-  </data>
-  <data name="time" xml:space="preserve">
-    <value>Time</value>
-  </data>
-  <data name="type" xml:space="preserve">
-    <value>Type</value>
-  </data>
-  <data name="vendor" xml:space="preserve">
-    <value>Vendor</value>
   </data>
 </root>
